# qwen2-triton-training

./: README.md  pyproject.toml
benchmarks/: bench_training.py
kernels/: cross_entropy.py  rms_norm.py  swiglu.py
model/: loader.py  patch.py
tests/: test_kernels.py
train/: lora.py  trainer.py
